<resources>
    <string name="app_name">Loco-MotionLayout</string>
    <string name="bookcover">Book Cover</string>
    <string name="synopsis">Synopsis</string>
    <string name="synopsis_text">In No Longer Human, the first-person narrator, Yozo, traces his development and experiences from childhood through his twenty-seventh year. Using the device of a journal kept by the narrator which has been recovered and is being read by someone else, the author has made this book a revelation of his innermost self and a confession of his increasing alienation from society. In fact, the book is highly autobiographical and belongs to the “I novel” genre, a style popular in Japan. Yozo learns very early as a child that he is apparently quite different from the people around him, and he consequently fears these people. Yet he wants to be accepted, so by constantly playing the role of clown, he makes himself popular. He observes in general that people live in mutual distrust and are insincere. On the way home from a political rally sponsored by his father, he overhears family friends saying how idiotic the meeting was; these same friends then congratulate his father on a “wonderful meeting.”</string>
    <string name="review_text">314 Reviews</string>
    <string name="novel">Novel</string>
    <string name="no_longer_human">No Longer Human</string>
    <string name="by_olly_moss_1894">by Olly Moss, 1894</string>
    <string name="read">Read</string>
    <string name="fantasy">Fantasy</string>
    <string name="horror">Horror</string>
    <string name="mikezo">mikezo</string>
    <string name="midnight_pie">Midnight Pie</string>
    <string name="legume_blue">Legume Blue</string>
    <string name="hot_waffle">Hot Waffle</string>
</resources>
